; ModuleID = '/home/carl/AnghaBench/h2o/lib/handler/configurator/extr_server_timing.c_on_config_exit.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/handler/configurator/extr_server_timing.c_on_config_exit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32* }
%struct.server_timing_configurator_t = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i64 }

@SERVER_TIMING_MODE_OFF = common dso_local global i64 0, align 8
@SERVER_TIMING_MODE_ENFORCE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, %struct.TYPE_5__*, i32*)* @on_config_exit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @on_config_exit(i32* %0, %struct.TYPE_5__* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_5__*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.server_timing_configurator_t*, align 8
  store i32* %0, i32** %4, align 8
  store %struct.TYPE_5__* %1, %struct.TYPE_5__** %5, align 8
  store i32* %2, i32** %6, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = bitcast i32* %8 to i8*
  %10 = bitcast i8* %9 to %struct.server_timing_configurator_t*
  store %struct.server_timing_configurator_t* %10, %struct.server_timing_configurator_t** %7, align 8
  %11 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %12 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %11, i32 0, i32 0
  %13 = load i32*, i32** %12, align 8
  %14 = icmp ne i32* %13, null
  br i1 %14, label %15, label %36

15:                                               ; preds = %3
  %16 = load %struct.server_timing_configurator_t*, %struct.server_timing_configurator_t** %7, align 8
  %17 = getelementptr inbounds %struct.server_timing_configurator_t, %struct.server_timing_configurator_t* %16, i32 0, i32 0
  %18 = load %struct.TYPE_4__*, %struct.TYPE_4__** %17, align 8
  %19 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = load i64, i64* @SERVER_TIMING_MODE_OFF, align 8
  %22 = icmp ne i64 %20, %21
  br i1 %22, label %23, label %36

23:                                               ; preds = %15
  %24 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %25 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %24, i32 0, i32 0
  %26 = load i32*, i32** %25, align 8
  %27 = load %struct.server_timing_configurator_t*, %struct.server_timing_configurator_t** %7, align 8
  %28 = getelementptr inbounds %struct.server_timing_configurator_t, %struct.server_timing_configurator_t* %27, i32 0, i32 0
  %29 = load %struct.TYPE_4__*, %struct.TYPE_4__** %28, align 8
  %30 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %29, i32 0, i32 0
  %31 = load i64, i64* %30, align 8
  %32 = load i64, i64* @SERVER_TIMING_MODE_ENFORCE, align 8
  %33 = icmp eq i64 %31, %32
  %34 = zext i1 %33 to i32
  %35 = call i32 @h2o_server_timing_register(i32* %26, i32 %34)
  br label %36

36:                                               ; preds = %23, %15, %3
  %37 = load %struct.server_timing_configurator_t*, %struct.server_timing_configurator_t** %7, align 8
  %38 = getelementptr inbounds %struct.server_timing_configurator_t, %struct.server_timing_configurator_t* %37, i32 0, i32 0
  %39 = load %struct.TYPE_4__*, %struct.TYPE_4__** %38, align 8
  %40 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %39, i32 -1
  store %struct.TYPE_4__* %40, %struct.TYPE_4__** %38, align 8
  ret i32 0
}

declare dso_local i32 @h2o_server_timing_register(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
